Fixing judgments field names for metrics. Related to #77.